# ootpisp1

./: .gitignore  BUILD.md  CMakeLists.txt  LR3_implementation_guide.md  README.md  giganigga.scene  imgui.ini  implementation_plan-4.md  implementation_plan.md
build-test/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  GraphEditor  Makefile  cmake_install.cmake
src/: main.cpp
src/core/: CompositeFigure.cpp  CompositeFigure.hpp  Figure.cpp  Figure.hpp  Figures.cpp  Figures.hpp  GeometryUtils.hpp  MathUtils.hpp  PolylineFigure.cpp  PolylineFigure.hpp  Scene.cpp  Scene.hpp  SceneSerializer.cpp
src/ui/: CreateFigureModal.cpp  CreateFigureModal.hpp  PropertiesPanel.cpp  PropertiesPanel.hpp  Toolbar.cpp  Toolbar.hpp
src/utils/: GeometryUtils.cpp  GeometryUtils.hpp
